[feature] output forwarding from bazel processes (#198)
* Output forwarding from bazel processes

* Duration

* Update changelog

Co-authored-by: Lukasz Wawrzyk <uwawrzyk@twitter.com>